두번째 index.html 갱신에 대한 commit

--- a/lab/index.html
+++ b/lab/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Yu Home</title>
+    <title>Choi Home</title>
 </head>
 <body>
 홈페이지 방문을 환영합니다.
