첫번째 index.html 갱신에 대한 commit

--- a/lab/index.html
+++ b/lab/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Choi Home</title>
+    <title>Greetings</title>
 </head>
 <body>
-홈페이지 방문을 환영합니다.
+방문을 환영합니다
 </body>
 </html>
