--- a/lab/index.html
+++ b/lab/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Greetings</title>
+    <title>Home</title>
 </head>
 <body>
 방문을 환영합니다.
