index.html 갱신에 대한 commit

--- a/lab/index.html
+++ b/lab/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>My Home</title>
 </head>
 <body>
 안녕하세요. 방문을 환영합니다.
