index.html 갱신에 대한 commit 2

--- a/lab/assignment01.html
+++ b/lab/assignment01.html
@@ -8,24 +8,25 @@
 * 필수 입력 항목 <br><br> 기본 정보<br><br>
 <form>
     <label>이 름* <input type="text" name="user_name" size="8" value=""></label><br>
-    <label>이메일* <input type="email" size=:"15" placeholder="id@domain.com"></label><br>
+    <label>이메일* <input type="email" size=:"15" placeholder="id@domain_name"></label><br>
     <label>암호* <input type="password" name="pwd" size="12"></label><br>
     <label>암호 확인* <input type="password" name="pwd" size="12"></label><br>
     <label>모바일 폰* <input type="tel" size="13" placeholder="010-0000-0000"></label><br>
     <label>개인 홈페이지 <input type="url" size="30" placeholder="http://"></label><br>
     <label>주소* <input type="text" name="user_address" size="30" value=""></label><br><br>
     학력 <br><br>
-    <label>학교명 <input type="text" name="university" size="12" value=""></label><br>
-    <label>전공 <input type="text" name="course" size="12" value=""></label><br>
+    <label>학교 명* <input type="text" name="university" size="12" value=""></label><br>
+    <label>전공* <input type="text" name="course" size="12" value=""></label><br>
     졸업 여부*
     <label><select name="graduation">
         <option value="1" selected>---선택---</option>
         <option value="2">졸업예정</option>
         <option value="3">졸업</option>
     </select></label><br>
-    <label>졸업 (예정)일 <input type="date" name="user_date" value="연도-월-일"></label><br>
+    <label>졸업(예정)일 <input type="date" name="user_date" value="연도-월-일"></label><br><br>
+    업무 경력<br><br>
     <label>근무업체명 <input type="text" name="company" size="20" value=""></label><br>
-    <label>직위 <input type="text" name="position" size="10" value=""></label><br>
+    <label>직 위 <input type="text" name="position" size="10" value=""></label><br>
     <label>담당 업무
         <textarea name="course" cols="80" rows="10">이전 업체에서 담당한 업무를 기술하시오.
         </textarea></label><br>
