--- a/lab/assignment01.html
+++ b/lab/assignment01.html
@@ -32,7 +32,7 @@
         </textarea></label><br>
     <label>근무년수 <input type="number" min="0" max="10" step="0.5">년</label><br><br>
     자기소개서<br><br>
-    첨부 파일 <input type="file"><br>
+    첨부 파일 <input type="file"><br><br>
     <input type="button" name="submit1" value="제 출">
     <input type="button" name="reset1" value="재작성">
 </form>
