--- a/lab/index.html
+++ b/lab/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 안녕하세요. 방문을 환영합니다.
+<a href="https://yuzuneul.github.io/webpgm/lab/assignment01.html" target="blank" title="과제1">과제1</a>
+<a href="https://yuzuneul.github.io/webpgm/lab/assignment02.html" target="blank" title="과제2">과제2</a>
 </body>
 </html>
