index.html 갱신에 대한 commit

--- a/lab/index.html
+++ b/lab/index.html
@@ -5,8 +5,10 @@
     <title>My Home</title>
 </head>
 <body>
-안녕하세요. 방문을 환영합니다.
-<a href="https://yuzuneul.github.io/webpgm/lab/assignment01.html" target="blank" title="과제1">과제1</a>
-<a href="https://yuzuneul.github.io/webpgm/lab/assignment02.html" target="blank" title="과제2">과제2</a>
+<h3>과제</h3>
+<ol>
+    <li><a href="https://yuzuneul.github.io/webpgm/lab/assignment01.html" target="blank" title="과제1">과제1</a></li>
+    <li><a href="https://yuzuneul.github.io/webpgm/lab/assignment02.html" target="blank" title="과제2">과제2</a></li>
+</ol>
 </body>
 </html>
