--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -115,7 +115,7 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-md-7 text-center">
                 <div class="site-hero-contents" data-aos="fade-up">
-                  <h1 class="hero-heading text-white">Our Rooms</h1>
+                  <h1 class="hero-heading text-white">Interests</h1>
                 </div>
               </div>
             </div>
