웹페이지 과제 갱신에 대한 commit 3 (12/21)

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           </div>
         </div>
       </nav>
+    </div>
 
       <div class="untree_co--site-main">
 
@@ -307,6 +308,7 @@
             </div>
           </div>
         </div>
+      </div>
 
     
         <div class="untree_co--site-section py-5 bg-body-darker">
@@ -355,8 +357,8 @@
             </div>
           </div>
         </div>
-
       </footer>
+
       <div class="row mt-5">
         <div class="col-12 text-center">
           <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ --></p>
