웹페이지 과제 갱신에 대한 commit 4 (12/23)

--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -52,7 +52,7 @@
 
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li class="active"><a href="../index.html">Home</a></li>
 
               <li class="has-children">
                 <a href="interests.html">Interests</a>
@@ -263,7 +263,7 @@
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
                   <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
-                  <p><a href=index.html class="more mb-0" style="font-weight:bold; color:darkmagenta">More</a></p>
+                  <p><a href=../index.html class="more mb-0" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
             </div>
@@ -291,7 +291,7 @@
       </footer>
         <div class="row mt-5 pt-5">
           <div class="col-12 text-center">
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
           </p>
           </div>
         </div>
