웹페이지 과제 갱신에 대한 commit 4 (12/23)

--- a/My Page/Portfolio/contact.html
+++ b/My Page/Portfolio/contact.html
@@ -52,7 +52,7 @@
 
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="../../index.html">Home</a></li>
 
               <li class="has-children">
                 <a href="interests.html">Interests</a>
@@ -245,7 +245,7 @@
           <div class="row mt-5 pt-5">
             <div class="col-12 text-center">
               <p>
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
               </p>
             </div>
           </div>
