웹페이지 과제 갱신에 대한 commit 4 (12/23)

--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -72,7 +72,7 @@
                     <a href="#winter">2022-2학기</a>
                   </li>
                   <li>
-                    <a href="study.html">기타</a>
+                    <a href="#hobby">기타</a>
                   </li>
                 </ul>
               </li>
@@ -112,12 +112,12 @@
     </div>
 
      <main class="site-untree_co--main">
-       <div class="untree_co--site-hero inner-page" style="background-image: url('images/study 배경2.jpg')">
+       <div class="untree_co--site-hero inner-page" style="background-image: url('images/study 배경.jpg')">
          <div class="container">
            <div class="row align-items-center justify-content-center">
              <div class="col-md-7 text-center">
                <div class="site-hero-contents" data-aos="fade-up">
-                 <h1 class="hero-heading" style="color:black; background-color:#F6F3E8">Study</h1>
+                 <h1 class="hero-heading" style="color:black; background-color:#dae0e5">Study</h1>
                </div>
              </div>
            </div>
@@ -136,7 +136,7 @@
          </div>
 
 
-         <div class="container">
+         <div class="container"  style="outline-color: #0d95e8">
            <div class="row">
              <div class="col-lg-4" data-aos="fade-up">
                <span class="subheading d-inline-block mb-2">데이K0013</span>
@@ -180,10 +180,11 @@
            </div>
          </div>
          <br><br><br><br><br>
+
          <div class="container">
            <div class="row">
              <div class="col-lg-4" data-aos="fade-up">
-               <span class="subheading d-inline-block mb-2">데이B0010</span>
+               <span class="subheading d-inline-block mb-2">데이K0058</span>
                <h2 class="mb-4" style="font-weight:bold">데이터베이스응용</h2>
                <p class="mb-4"><img src="images/svg/check2-circle.svg">  데이터베이스 전문가의 기본 업무인 SQL을 활용하여 데이터베이스 생성, 질의, 분석 작업을 가능하도록 한다.<br><br> <img src="images/svg/check2-circle.svg">  데이터베이스 물리적 설계, 트랜잭션, 보안의 기본 이론을 학습하여 데이터베이스 관리자로서의 역량을 키운다.<br><br> <img src="images/svg/check2-circle.svg">  소셜 네트워크, 텍스트, 게놈 데이터 등 비정형 데이터를 다룰수 있는 NoSQL 및 그래프 데이터베이스 활용 능력을 키운다.</p>
              </div>
@@ -194,6 +195,27 @@
                  </div>
                  <div class="col-6" data-aos="fade-up" data-aos-delay="100">
                    <img src="images/데베응2.jpg" alt="Image" class="img-fluid">
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <br><br><br><br><br>
+
+         <div class="container">
+           <div class="row">
+             <div class="col-lg-4" data-aos="fade-up">
+               <span class="subheading d-inline-block mb-2">데이B0009</span>
+               <h2 class="mb-4" style="font-weight:bold">회귀분석</h2>
+               <p class="mb-4"><img src="images/svg/check2-circle.svg">  R프로그램을 이용하여 데이터를 다루고 적합한 회귀분석 모형을 분석하는 능력을 배양한다.<br><br> <img src="images/svg/check2-circle.svg">  단순회귀분석모형, 다중회귀분석모형, 회귀진단, 모형비교, 변수선택법 등을 다루어 회귀분석에 대한 개념 및 응용을 할 수 있도록 한다.<br><br></p>
+             </div>
+             <div class="col-lg-8">
+               <div class="row">
+                 <div class="col-6 mt-5" data-aos="fade-up" data-aos-delay="100">
+                   <img src="images/회귀.jpg" alt="Image" class="img-fluid">
+                 </div>
+                 <div class="col-6" data-aos="fade-up" data-aos-delay="100">
+                   <img src="images/회귀회귀.jpg" alt="Image" class="img-fluid">
                  </div>
                </div>
              </div>
@@ -221,14 +243,106 @@
              </div>
            </div>
          </div>
+       </section>
+
+     <section id="hobby"></section>
+       <div class="untree_co--site-section">
+         <div class="container">
+           <div class="row justify-content-center text-center">
+             <div class="col-lg-6 section-heading" data-aos="fade-up">
+               <h3 class="text-center">Etc</h3>
+               <h6> 학과 공부 外</h6>
+             </div>
+           </div>
+         </div>
        </div>
 
+         <div class="container p-5" style="background-color: #dfc2c4">
+           <div class="row">
+             <div class="col-lg-6" data-aos="fade-up">
+               <div id="group">
+                 <div class="card">
+                   <div class="card-header" id="headingOne">
+                     <h5 class="mb-0">
+                       <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne">HSK 공부</button>
+                     </h5>
+                   </div>
+                   <div id="collapseOne" class="collapse show"  data-parent="#group">
+                     <div class="card-body">
+                       학습기간 : 2022.04~2022.06<br>
+                       학습내용<br>
+                       <img src="images/svg/pencil-square.svg"> HSK 4급 취득을 위해 각 파트별(독해,청해,쓰기)로 기출 문제를 풀음. <br> <img src="images/svg/pencil-square.svg"> 필수 어휘 1200개를 반복해 암기.
+                     </div>
+                   </div>
+                 </div>
+                 <div class="card">
+                   <div class="card-header" id="headingTwo">
+                     <h5 class="mb-0">
+                       <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo">JLPT 공부</button>
+                     </h5>
+                   </div>
+                   <div id="collapseTwo" class="collapse show" data-parent="#group">
+                     <div class="card-body">
+                       학습기간 : 2022.11~2022.12<br>
+                       학습내용<br>
+                       <img src="images/svg/pencil-square.svg">JLPT 1급 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg"> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습.
+                     </div>
+                   </div>
+                 </div>
 
-      </section>
-      </main>
-      <br><br>
+                 <div class="card">
+                   <div class="card-header" id="headingThree">
+                     <h5 class="mb-0">
+                       <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree">영어 공부</button>
+                     </h5>
+                   </div>
+                   <div id="collapseThree" class="collapse show" data-parent="#group">
+                     <div class="card-body">
+                       학습기간 : 상시<br>
+                       학습내용<br>
+                       <img src="images/svg/pencil-square.svg">영어 어휘를 까먹지 않도록 시간 날때마다 학습 진행.
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
 
-        
+             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+               <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                 <ol class="carousel-indicators">
+                   <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                   <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                   <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                 </ol>
+                 <div class="carousel-inner">
+                   <div class="carousel-item active">
+                     <img class="d-block" style="width:600px; height:430px" src="images/HSK.jpg" alt="First slide">
+                     <div class="carousel-caption d-none d-md-block"><p>HSK 공부</p></div>
+                   </div>
+                   <div class="carousel-item">
+                     <img class="d-block" style="width:600px; height:430px" src="images/JLPT.jpg" alt="Second slide">
+                     <div class="carousel-caption d-none d-md-block"><p>JLPT 공부</p></div>
+                   </div>
+                   <div class="carousel-item">
+                     <img class="d-block" style="width:600px; height:430px" src="images/배경%201.jpg" alt="Third slide">
+                     <div class="carousel-caption d-none d-md-block"><p>영어 공부</p></div>
+                   </div>
+                 </div>
+
+                 <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                   <span class="sr-only">Previous</span>
+                 </a>
+                 <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                   <span class="sr-only">Next</span>
+                 </a>
+               </div>
+             </div>
+         </div>
+         </div>
+     </section>
+     </main>
 
 
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
@@ -242,7 +356,7 @@
     <script src="js/vendor/ofi.min.js"></script>
 
     <script src="js/vendor/aos.js"></script>
-  <div class="untree_co--site-section py-5 bg-body-darker">
+  <div class="untree_co--site-section mt-5 py-5 bg-body-darker">
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
@@ -291,8 +405,7 @@
       </footer>
         <div class="row mt-5 pt-5">
           <div class="col-12 text-center">
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
-          </p>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a></p>
           </div>
         </div>
 
