--- a/lab/index.html
+++ b/lab/index.html
@@ -7,11 +7,11 @@
 <body>
 <h3>2022-2학기 웹프로그래밍 과제</h3>
 <ol>
-    <li><a href="https://yuzuneul.github.io/webpgm/Home/assignment01.html" target="blank" title="과제1">과제1</a></li>
-    <li><a href="https://yuzuneul.github.io/webpgm/Home/assignment02.html" target="blank" title="과제2">과제2</a></li>
-    <li><a href="https://yuzuneul.github.io/webpgm/Home/assignment3-1.html" target="blank" title="과제2">과제3-1</a></li>
-    <li><a href="https://yuzuneul.github.io/webpgm/Home/assignment03-22.html" target="blank" title="과제2">과제3-2</a></li>
-    <li><a href="https://yuzuneul.github.io/webpgm/Home/assignment04.html" target="blank" title="과제2">과제4</a></li>
+    <li><a href="https://yuzuneul.github.io/Home/lab/assignment01.html" target="blank" title="과제1">과제1</a></li>
+    <li><a href="https://yuzuneul.github.io/Home/lab/assignment02.html" target="blank" title="과제2">과제2</a></li>
+    <li><a href="https://yuzuneul.github.io/Home/lab/assignment3-1.html" target="blank" title="과제3-1">과제3-1</a></li>
+    <li><a href="https://yuzuneul.github.io/Home/lab/assignment03-22.html" target="blank" title="과제3-2">과제3-2</a></li>
+    <li><a href="https://yuzuneul.github.io/Home/lab/assignment04.html" target="blank" title="과제4">과제4</a></li>
 </ol>
 </body>
 </html>
