--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -117,7 +117,7 @@
            <div class="row align-items-center justify-content-center">
              <div class="col-md-7 text-center">
                <div class="site-hero-contents" data-aos="fade-up">
-                 <h1 class="hero-heading" style="color:black; background-color:#dae0e5">Study</h1>
+                 <h1 class="hero-heading" style="color:black; background-color:#dae0e5; display:inline-block;">    Study   </h1>
                </div>
              </div>
            </div>
@@ -142,7 +142,7 @@
                <span class="subheading d-inline-block mb-2">데이K0013</span>
                <h2 class="mb-4" style="font-weight:bold">웹프로그래밍</h2>
                <p class="mb-4"><img src="images/svg/check2-circle.svg">  웹 사이트 제작 기술 중 프론트-엔드(Front-End) 기술로 기본적인 HTML, CSS, Javascript에 대해 배운다. <br><br> <img src="images/svg/check2-circle.svg">  실질적인 웹 문서 작성에의 활용을 위해 Pycharm을 통한 프로그래밍을 한 후, GitHub를 이용한 웹 사이트 구축과 웹 문서 publish에 대해 배운다.</p>
-               <p><a href="../../../webprogramming/lab/index.html" class="btn btn-black">과제 목록</a></p>
+               <p><a href="https://yuzuneul.github.io/Home/webprogramming/lab/index.html" class="btn btn-black">과제 목록</a></p>
              </div>
              <div class="col-lg-8">
                <div class="row">
@@ -234,10 +234,10 @@
              <div class="col-lg-8">
                <div class="row">
                  <div class="col-6 mt-5" data-aos="fade-up" data-aos-delay="100">
-                   <img src="images/국투론2001.bmp" alt="Image" class="img-fluid" style="width:500px; height:470px">
+                   <img src="images/국투론.jpg" alt="Image" class="img-fluid" style="width:500px;">
                  </div>
                  <div class="col-6" data-aos="fade-up" data-aos-delay="100">
-                   <img src="images/국투론.jpg" alt="Image" class="img-fluid" style="height:470px">
+                   <img src="images/국투론2001.bmp" alt="Image" class="img-fluid">
                  </div>
                </div>
              </div>
@@ -251,7 +251,7 @@
            <div class="row justify-content-center text-center">
              <div class="col-lg-6 section-heading" data-aos="fade-up">
                <h3 class="text-center">Etc</h3>
-               <h6> 학과 공부 外</h6>
+               <h5> 학과 공부 外</h5>
              </div>
            </div>
          </div>
@@ -285,7 +285,7 @@
                      <div class="card-body">
                        학습기간 : 2022.11~2022.12<br>
                        학습내용<br>
-                       <img src="images/svg/pencil-square.svg">JLPT 1급 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg"> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습.
+                       <img src="images/svg/pencil-square.svg"> JLPT N1 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg"> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습.
                      </div>
                    </div>
                  </div>
@@ -300,7 +300,7 @@
                      <div class="card-body">
                        학습기간 : 상시<br>
                        학습내용<br>
-                       <img src="images/svg/pencil-square.svg">영어 어휘를 까먹지 않도록 시간 날때마다 학습 진행.
+                       <img src="images/svg/pencil-square.svg"> 내년에 치를 예정인 토익과 무역 영어 시험 준비를 위해 관련 내용을 시간 날때마다 학습함.
                      </div>
                    </div>
                  </div>
@@ -316,15 +316,15 @@
                  </ol>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                     <img class="d-block" style="width:600px; height:430px" src="images/HSK.jpg" alt="First slide">
+                     <img class="d-block" style="width:600px; height:500px" src="images/HSK.jpg" alt="First slide">
                      <div class="carousel-caption d-none d-md-block"><p>HSK 공부</p></div>
                    </div>
                    <div class="carousel-item">
-                     <img class="d-block" style="width:600px; height:430px" src="images/JLPT.jpg" alt="Second slide">
+                     <img class="d-block" style="width:600px; height:500px" src="images/JLPT.jpg" alt="Second slide">
                      <div class="carousel-caption d-none d-md-block"><p>JLPT 공부</p></div>
                    </div>
                    <div class="carousel-item">
-                     <img class="d-block" style="width:600px; height:430px" src="images/배경%201.jpg" alt="Third slide">
+                     <img class="d-block" style="width:600px; height:500px" src="images/영어.jpg" alt="Third slide">
                      <div class="carousel-caption d-none d-md-block"><p>영어 공부</p></div>
                    </div>
                  </div>
@@ -356,11 +356,12 @@
     <script src="js/vendor/ofi.min.js"></script>
 
     <script src="js/vendor/aos.js"></script>
-  <div class="untree_co--site-section mt-5 py-5 bg-body-darker">
+
+        <div class="untree_co--site-section mt-5 py-5 bg-body-darker">
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class=>Thank you for visiting my website.</h3>
+                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid"></h3>
               </div>
             </div>
           </div>
