웹페이지 과제 갱신에 대한 commit 5 (12/25)

--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -142,7 +142,7 @@
                <span class="subheading d-inline-block mb-2">데이K0013</span>
                <h2 class="mb-4" style="font-weight:bold">웹프로그래밍</h2>
                <p class="mb-4"><img src="images/svg/check2-circle.svg">  웹 사이트 제작 기술 중 프론트-엔드(Front-End) 기술로 기본적인 HTML, CSS, Javascript에 대해 배운다. <br><br> <img src="images/svg/check2-circle.svg">  실질적인 웹 문서 작성에의 활용을 위해 Pycharm을 통한 프로그래밍을 한 후, GitHub를 이용한 웹 사이트 구축과 웹 문서 publish에 대해 배운다.</p>
-               <p><a href="https://yuzuneul.github.io/Home/webprogramming/lab/index.html" class="btn btn-black">과제 목록</a></p>
+               <p><a href="https://yuzuneul.github.io/Home/lab/index.html" class="btn btn-black">과제 목록</a></p>
              </div>
              <div class="col-lg-8">
                <div class="row">
