--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -31,13 +31,6 @@
   </head>
   <body>
     
-    <div id="untree_co--overlayer"></div>
-    <div class="loader">
-      <div class="spinner-border text-primary" role="status">
-        <span class="sr-only">Loading...</span>
-      </div>
-    </div>
-    
     <nav class="untree_co--site-mobile-menu">
       <div class="close-wrap d-flex">
         <a href="#" class="d-flex ml-auto js-menu-toggle">
@@ -123,7 +116,7 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center">
               <div class="site-hero-contents" data-aos="fade-up">
-                <h1 class="hero-heading text-white">Blog</h1>
+                <h1 class="hero-heading text-white">Interests</h1>
               </div>
             </div>
           </div>
@@ -340,7 +333,7 @@
       </footer>
         <div class="row mt-5 pt-5">
           <div class="col-12 text-center">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a></p>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. <br> Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a></p>
           </div>
         </div>
 
