--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Roboto:300,400,500,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="My%20Page/Portfolio/css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="My%20Page/Portfolio/css/vendor/owl.carousel.min.css">
