--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -406,7 +406,7 @@
       </footer>
         <div class="row mt-5 pt-5">
           <div class="col-12 text-center">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a></p>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="../../index.html">Untree.co</a>. All Rights Reserved. <br> Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a></p>
           </div>
         </div>
 
