웹페이지 과제 갱신에 대한 commit 5 (12/25)

--- a/index.html
+++ b/index.html
@@ -524,26 +524,23 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <div class="card" style="width:250px">
+              <div class="card" style="width:250px; height:375px">
                 <img src="My%20Page/Portfolio/images/프로필%20사진%202.jpg">
                 <div class="card-body">
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
                   <p>Female<img src="My%20Page/Portfolio/images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
-                  <p><a href=#about class="more mb-0" style="font-weight:bold; color:darkmagenta">More</a></p>
+                  <p><a href=#about class="more" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 text-md-start">
-                <h3>Contact</h3>
-                <p><a href="#">phone : +82 010-3906-7595</a></p>
-                <p><a href="#">e-mail : cyj44126@naver.com</a></p>
-                <p><a href="#">address : 대한민국 서울특별시</a></p>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Share your SNS!</h3>
+              <h3>Contact</h3>
+              <p><a href="#">phone : +82 010-3906-7595</a></p>
+              <p><a href="#">e-mail : cyj44126@naver.com</a></p>
+              <p><a href="#">address : 대한민국 서울특별시</a></p>
+              <h3 class="mt-5">Share your SNS!</h3>
                 <p>Let's communicate with me!</p>
                   <form method="get" class="form-sns">
                     <div class="d-flex">
@@ -551,6 +548,11 @@
                       <input type="submit" value="submit" class="btn btn-black text-white">
                     </div>
                   </form>
+            </div>
+
+            <div class="col-md-4">
+              <h3>Map</h3>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr"" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
