--- a/My Page/Portfolio/contact.html
+++ b/My Page/Portfolio/contact.html
@@ -16,7 +16,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Roboto:300,400,500,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
@@ -122,7 +122,7 @@
                   <h1 class="hero-heading mb-10">Contact Me</h1>
                   <div class="sub-text w-75 mt-4">
                     <p>If you have questions about anything, feel free to come by and ask, any time! </p>
-                    <p class="h4 mt-4"><img src="images/svg/balloon-heart-fill.svg"> Use the form below to ask questions!</p>
+                    <p><img src="images/svg/balloon-heart-fill.svg"> 아래의 폼을 활용해 궁금한 점 혹은 문의 사항을 남겨주세요! </p>
                   </div>
                 </div>
               </div>
@@ -135,7 +135,7 @@
             <div class="row">
               <div class="col-12" data-aos="fade-up">
                 <h2 class="display-4 mb-4">Fill the form!</h2>
-                <h4 class="mb-4">I'll check the responses asap!</h4>
+                <p class="mb-4">가능한 빠르게 답변을 확인하겠습니다!</p>
               </div>
 
               <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">
@@ -206,30 +206,38 @@
 
 
       </div>
+
+        <div class="untree_co--site-section mt-5 py-5 bg-body-darker">
+          <div class="container">
+            <div class="row">
+              <div class="col-12 text-center">
+                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid"></h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
       <footer class="untree_co--site-footer">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <div class="card" style="width:250px">
+              <div class="card" style="width:250px; height:375px">
                 <img src="images/프로필%20사진%202.jpg">
                 <div class="card-body">
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
                   <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
-                  <p><a href=#about class="more mb-0" style="font-weight:bold; color:darkmagenta">More</a></p>
+                  <p><a href="../../index.html" class="more" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 text-md-start">
-                <h3>Contact</h3>
-                <p><a href="#">phone : +82 010-3906-7595</a></p>
-                <p><a href="#">e-mail : cyj44126@naver.com</a></p>
-                <p><a href="#">address : 대한민국 서울특별시</a></p>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Share your SNS!</h3>
+              <h3>Contact</h3>
+              <p><a href="#">phone : +82 010-3906-7595</a></p>
+              <p><a href="#">e-mail : cyj44126@naver.com</a></p>
+              <p><a href="#">address : 대한민국 서울특별시</a></p>
+              <h3 class="mt-5">Share your SNS!</h3>
                 <p>Let's communicate with me!</p>
                   <form method="get" class="form-sns">
                     <div class="d-flex">
@@ -237,6 +245,11 @@
                       <input type="submit" value="submit" class="btn btn-black text-white">
                     </div>
                   </form>
+            </div>
+
+            <div class="col-md-4">
+              <h3>Map</h3>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
