웹페이지 과제 갱신에 대한 commit 5 (12/25)

--- a/My Page/Portfolio/contact.html
+++ b/My Page/Portfolio/contact.html
@@ -146,15 +146,15 @@
                     <input type="text" class="form-control" id="name" required>
                   </div>
                   <div class="form-group">
-                    <label for="email2">Your Email</label>
+                    <label for="email2">Email 주소</label>
                     <input type="text" class="form-control" id="email2">
                   </div>
                   <div class="form-group">
-                    <label for="subject">Title</label>
+                    <label for="subject">제목</label>
                     <input type="text" class="form-control" id="subject" required>
                   </div>
                   <div class="form-group">
-                    <label for="message">Message *</label>
+                    <label for="message">내용 *</label>
                     <textarea name="message" class="form-control" id="message" cols="30" rows="10" required></textarea>
                   </div>
                     <div class="form-group">
@@ -193,17 +193,6 @@
         </div>
       </div>
     </main>
-
-        <div class="untree_co--site-section py-5 bg-body-darker">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 text-center">
-                <h3 class=><img src="images/svg/emoji-smile.svg" class="image-fluid"> Thank you for visiting my website <img src="images/svg/emoji-smile.svg" class="image-fluid"></h3>
-              </div>
-            </div>
-          </div>
-        </div>
-
 
       </div>
 
