웹페이지 과제 갱신에 대한 commit 6

--- a/My Page/Portfolio/Blog.html
+++ b/My Page/Portfolio/Blog.html
@@ -58,10 +58,10 @@
                 <a href="interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">Sports</a>
+                    <a href="interests.html/">Sports</a>
                   </li>
                   <li>
-                    <a href="#">Dramas</a>
+                    <a href="interests.html/">Dramas</a>
                   </li>
                 </ul>
               </li>
@@ -76,7 +76,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="has-children">
+              <li class="has-children active">
                 <a href="Blog.html">Blog</a>
                 <ul class="dropdown">
                   <li>
@@ -420,7 +420,7 @@
         <div class="row justify-content-center align-items-center text-center">
           <div class="col-md-12">
             <form action="#">
-              <label><input type="search" name="s" id="s" placeholder="Type a keyword and hit enter..."  autocomplete="false"></label>
+              <label><input type="search" name="s" id="s" placeholder="Type a keyword..."  autocomplete="false"></label>
             </form>
           </div>
         </div>
