--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -51,16 +51,16 @@
 
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
-              <li class="active"><a href="../../index.html">Home</a></li>
+              <li><a href="../../index.html">Home</a></li>
 
-              <li class="has-children">
+              <li class="has-children active">
                 <a href="interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">Sports</a>
+                    <a href="interests.html">Sports</a>
                   </li>
                   <li>
-                    <a href="#">Dramas</a>
+                    <a href="interests.html">Dramas</a>
                   </li>
                 </ul>
               </li>
@@ -68,10 +68,10 @@
                 <a href="study.html">Study</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="study.html/">2022-2학기</a>
+                    <a href="study.html">2022-2학기</a>
                   </li>
                   <li>
-                    <a href="study.html/">기타</a>
+                    <a href="study.html">기타</a>
                   </li>
                 </ul>
               </li>
@@ -79,10 +79,10 @@
                 <a href="Blog.html">Blog</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#trip">여행</a>
+                    <a href="Blog.html">여행</a>
                   </li>
                   <li>
-                    <a href="#food">음식</a>
+                    <a href="Blog.html">음식</a>
                   </li>
                 </ul>
               </li>
@@ -347,7 +347,7 @@
         <div class="row justify-content-center align-items-center text-center">
           <div class="col-md-12">
             <form action="#">
-              <label><input type="search" name="s" id="s" placeholder="Type a keyword and hit enter..."  autocomplete="false"></label>
+              <label><input type="search" name="s" id="s" placeholder="Type a keyword..."  autocomplete="false"></label>
             </form>
           </div>
         </div>
