--- a/My Page/Portfolio/contact.html
+++ b/My Page/Portfolio/contact.html
@@ -58,10 +58,10 @@
                 <a href="interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">Sports</a>
+                    <a href="interests.html">Sports</a>
                   </li>
                   <li>
-                    <a href="#">Dramas</a>
+                    <a href="interests.html">Dramas</a>
                   </li>
 
                 </ul>
@@ -71,10 +71,10 @@
                 <ul class="dropdown">
 
                   <li>
-                    <a href="#">2022-2학기</a>
+                    <a href="study.html">2022-2학기</a>
                   </li>
                   <li>
-                    <a href="#">기타</a>
+                    <a href="study.html">기타</a>
                   </li>
                 </ul>
               </li>
@@ -82,14 +82,14 @@
                 <a href="Blog.html">Blog</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">여행</a>
+                    <a href="Blog.html">여행</a>
                   </li>
                   <li>
-                    <a href="#">음식</a>
+                    <a href="Blog.html">음식</a>
                   </li>
                 </ul>
               </li>
-              <li><a href="contact.html">Contact</a></li>
+              <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
           </div>
 
@@ -256,7 +256,15 @@
     <!-- Search -->
     <div class="search-wrap">
       <a href="#" class="close-search js-search-toggle">
-        <span>Close</span></a>
+        <span>Close</span>
+      </a>
+      <div class="container">
+        <div class="row justify-content-center align-items-center text-center">
+          <div class="col-md-12">
+            <form action="#">
+              <label><input type="search" name="s" id="s" placeholder="Type a keyword..."  autocomplete="false"></label>
+            </form>
+          </div>
         </div>
       </div>
     </div>
