--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -58,15 +58,15 @@
                 <a href="interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">Sports</a>
+                    <a href="interests.html">Sports</a>
                   </li>
                   <li>
-                    <a href="#">Dramas</a>
+                    <a href="interests.html">Dramas</a>
                   </li>
                 </ul>
               </li>
-              <li class="has-children">
-                <a href="study.html">Study</a>
+              <li class="has-children active">
+                <a href="study.html/">Study</a>
                 <ul class="dropdown">
                   <li>
                     <a href="#winter">2022-2학기</a>
@@ -80,10 +80,10 @@
                 <a href="Blog.html">Blog</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">여행</a>
+                    <a href="Blog.html">여행</a>
                   </li>
                   <li>
-                    <a href="#">음식</a>
+                    <a href="Blog.html">음식</a>
                   </li>
                 </ul>
               </li>
@@ -420,7 +420,7 @@
         <div class="row justify-content-center align-items-center text-center">
           <div class="col-md-12">
             <form action="#">
-              <label><input type="search" name="s" id="s" placeholder="Type a keyword and hit enter..."  autocomplete="false"></label>
+              <label><input type="search" name="s" id="s" placeholder="Type a keyword..."  autocomplete="false"></label>
             </form>
           </div>
         </div>
