--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 <a href="My%20Page/Portfolio/interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">Sports</a>
+                    <a href="My%20Page/Portfolio/interests.html">Sports</a>
                   </li>
                   <li>
-                    <a href="#">Dramas</a>
+                    <a href="My%20Page/Portfolio/interests.html">Dramas</a>
                   </li>
                 </ul>
               </li>
@@ -78,10 +78,10 @@
                 <a href="My%20Page/Portfolio/Blog.html">Blog</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="#">여행</a>
+                    <a href="My%20Page/Portfolio/Blog.html">여행</a>
                   </li>
                   <li>
-                    <a href="#">음식</a>
+                    <a href="My%20Page/Portfolio/Blog.html">음식</a>
                   </li>
                 </ul>
               </li>
@@ -183,7 +183,7 @@
             </div>
           </div>
 
-          <div class="container mt-3" data-aos="fade-up" style="border-style: solid; border-width: 4px; border-color: #853846">
+          <div class="container" data-aos="fade-up" style="border-style: solid; border-width: 4px; border-color: #853846; margin-bottom:100px">
             <div class="row">
               <div class="col-lg-12 pt-4">
                 <h3 class="h3" style="font-weight:bold; text-decoration-line:underline">Undergraduate College Student</h3>
@@ -226,72 +226,132 @@
         </div>
       </div>
 
-    <div class="untree_co--site-section">
+    <div class="untree_co--site-section float-left pb-0 featured-rooms">
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-2">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="background-color:#F5F4ED">
-              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-ele" role="tab">초등학교</a>
-              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-mid" role="tab">중학교</a>
-              <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-high" role="tab">고등학교</a>
-              <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-univ" role="tab">대학교</a>
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="background-color:#F5F4ED; height:160px">
+              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-ele" role="tab" style="height:40px">초등학교</a>
+              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-mid" role="tab" style="height:40px">중학교</a>
+              <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-high" role="tab" style="height:40px">고등학교</a>
+              <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-univ" role="tab" style="height:40px">대학교</a>
             </div>
           </div>
           <div class="col-lg-10 mt-4 mt-lg-0">
             <div class="tab-content" id="v-pills-tabContent">
               <div class="tab-pane active show" id="v-pills-ele" role="tabpanel" aria-labelledby="v-pills-home-tab">
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-3">
                     <h4>광교초등학교</h4>
                     <ul>
                       <li>2011.03.02 전학</li>
                       <li>2013.02 졸업</li>
                     </ul>
                   </div>
-                  <div class="col-lg-6 text-center">
-                    <img src="My%20Page/Portfolio/images/초.jpg" alt="" class="img-fluid">
+                  <div class="col-lg-9">
+                    <div class="container-fluid pt-5">
+                      <div class="suite-wrap overlap-image-1">
+                        <div class="suite">
+                          <div class="image-stack">
+                            <div class="image-stack-item image-stack-item-top">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/초등학교.jpg" alt="Image" class="img-fluid pic1">
+                            </div>
+                            <div class="image-stack-item image-stack-item-bottom">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/초.jpg" alt="Image" class="img-fluid pic2">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="tab-pane fade" id="v-pills-mid" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-3">
                     <h4>광교중학교</h4>
-                    <ul>
-                      <li>2013.03.02 입학</li>
-                      <li>2016.02 졸업</li>
-                    </ul>
+                      <ul>
+                        <li>2013.03.02 입학</li>
+                        <li>2016.02 졸업</li>
+                      </ul>
                   </div>
-                  <div class="col-lg-6 text-center">
-                    <img src="My%20Page/Portfolio/images/중.jpg" alt="" class="img-fluid">
+                  <div class="col-lg-9">
+                    <div class="container-fluid pt-5">
+                      <div class="suite-wrap overlap-image-1">
+                        <div class="suite">
+                          <div class="image-stack">
+                            <div class="image-stack-item image-stack-item-top">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/중학교.jpg" alt="Image" class="img-fluid pic1">
+                            </div>
+                            <div class="image-stack-item image-stack-item-bottom">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/중.jpg" alt="Image" class="img-fluid pic2">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="tab-pane fade" id="v-pills-high" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-3">
                     <h4>광교고등학교</h4>
                     <ul>
                       <li>2016.03.02 전학</li>
                       <li>2019.01 졸업</li>
                     </ul>
                   </div>
-                  <div class="col-lg-6 text-center">
-                    <img src="My%20Page/Portfolio/images/고.jpg" alt="" class="img-fluid">
+                  <div class="col-lg-9">
+                    <div class="container-fluid pt-5">
+                      <div class="suite-wrap overlap-image-1">
+                        <div class="suite">
+                          <div class="image-stack">
+                            <div class="image-stack-item image-stack-item-top">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/고등학교.jpg" alt="Image" class="img-fluid pic1">
+                            </div>
+                            <div class="image-stack-item image-stack-item-bottom">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/고.jpg" alt="Image" class="img-fluid pic2">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="tab-pane fade" id="v-pills-univ" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-3">
                     <h4>동덕여자대학교</h4>
                     <ul>
                       <li>2020.03.02 입학</li>
                       <li>3학년 재학중</li>
                     </ul>
                   </div>
-                  <div class="col-lg-6 text-center">
-                    <img src="My%20Page/Portfolio/images/대.jpg" alt="" class="img-fluid">
+                  <div class="col-lg-9">
+                    <div class="container-fluid pt-5">
+                      <div class="suite-wrap overlap-image-1">
+                        <div class="suite">
+                          <div class="image-stack">
+                            <div class="image-stack-item image-stack-item-top">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/학생증.jpg" alt="Image" class="img-fluid pic1">
+                            </div>
+                            <div class="image-stack-item image-stack-item-bottom">
+                              <div class="overlay"></div>
+                              <img src="My%20Page/Portfolio/images/대.jpg" alt="Image" class="img-fluid pic2">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -367,7 +427,7 @@
                     <div class="card card-body">
                       <ul class="list-unstyled" style="color:black">
                         <li>English : 60%</li>
-                        <li>Japanese : 90%</li>
+                        <li>Japanese : 80%</li>
                         <li>Chinese : 40%</li>
                       </ul>
                     </div>
@@ -389,6 +449,7 @@
                       <ul class="list-unstyled" style="color:black">
                         <li>Photoshop : 40%</li>
                         <li>Premiere Pro : 20%</li>
+                        <li>After Effect : 20%</li>
                       </ul>
                     </div>
                   </div>
@@ -552,7 +613,7 @@
 
             <div class="col-md-4">
               <h3>Map</h3>
-              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr"" frameborder="0" allowfullscreen></iframe>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -573,7 +634,7 @@
         <div class="row justify-content-center align-items-center text-center">
           <div class="col-md-12">
             <form action="#">
-              <label><input type="search" name="s" id="s" placeholder="Type a keyword and hit enter..."  autocomplete="false"></label>
+              <label><input type="search" name="s" id="s" placeholder="Type a keyword..."  autocomplete="false"></label>
             </form>    
           </div>
         </div>
